adding persistence